apps/ops/victoria-metrics/manifests/victoriametrics-external-auth.securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: victoriametrics-external-auth
  namespace: ops
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: victoriametrics-external
  oidc:
    provider:
      issuer: https://id.edgard.org
    clientID: envoy-gateway
    clientSecret:
      name: envoy-gateway-oidc-client
    redirectURL: https://metrics.edgard.org/oauth2/callback
    logoutPath: /oauth2/logout
    cookieDomain: edgard.org
    scopes:
      - openid
      - profile
      - email
