apps/ops/victoria-metrics/manifests/victoriametrics-internal.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoriametrics-internal
  namespace: ops
  labels:
    external-dns.edgard.org/scope: internal
    hajimari.edgard.org/enabled: "true"
    hajimari.edgard.org/icon: chart-line
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-gateway-internal
      namespace: platform-system
      sectionName: https
  hostnames:
    - metrics.edgard.org
  rules:
    - matches:
        - path:
            type: Exact
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /vmui
            statusCode: 302
    - backendRefs:
        - name: victoriametrics
          port: 8428
